--- a/Code/Week 4/Linux/Week-4-Linux-Notes.html
+++ b/Code/Week 4/Linux/Week-4-Linux-Notes.html
@@ -302,9 +302,31 @@ pre code {
 <td></td>
 <td>a pipe, good for making things happen the way you want them to in ur brain m8</td>
 </tr>
+<tr class="even">
+<td>ls</td>
+<td>list all</td>
+</tr>
+<tr class="odd">
+<td>nano</td>
+<td>open an exsiting file or make an new one</td>
+</tr>
 </tbody>
 </table>
-<p>Use the website: regex101.com</p>
+</div>
+</div>
+<div id="grep" class="section level1">
+<h1>GREP:</h1>
+<p>Cheat sheet for regular expressions: &lt; <a href="https://cheatography.com/davechild/cheat-sheets/regular-expressions/" class="uri">https://cheatography.com/davechild/cheat-sheets/regular-expressions/</a> &gt;</p>
+<ul>
+<li><div class="line-block">wildcard (match anything following the letter)</div></li>
+</ul>
+<p>Examples of GREP: grep t<em>.txt = give me all the text files with the letter t in them ls </em>txt = give me all the files that are text files ? = exactly one of anything ls c*n = list all of the things that start with c and end with n</p>
+<p>file extensions aren’t hugely important in Linux</p>
+<div id="useful-links" class="section level2">
+<h2>Useful Links:</h2>
+<ul>
+<li>** regex101.com **</li>
+</ul>
 </div>
 </div>
 
